# cas

./: BUGS  CMakeLists.txt  Makefile  adjlog.h  arraysort.c  arraysort.h  basic.h  benchmark.c  benchmark.cpp  benchmark2.cpp  bitrankw32int.c  bitrankw32int.h  create-wtm.cpp  create.c  create.cpp  exp-query.cpp  getsize.cpp  mywtmatrix.cpp  mywtmatrix.h  text2adjacencybin.c  text2adjacencybin.cpp  tgs.c  tgs.cpp  tgs.h  use.c  use.cpp  vertices.cpp
